--- a/app/views/calculoipi_view.html
+++ b/app/views/calculoipi_view.html
@@ -11,56 +11,61 @@
             <div class="container">
                 <div id="ipiProprioModal" class="modal fade" role="dialog" tabindex="-1">
                     <div class="modal-dialog">
-                        <div class="modal-content col-sm-10 col-sm-offset-1">
+                        <div class="modal-content col-sm-8 col-sm-offset-2 col-xs-12">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 <h4 class="modal-title">IPI Próprio</h4>
                             </div>
                             <div class="modal-body">
-                                <form>
-                                    <div class="form-group">
-                                        <label for="lbBaseIpiProprio">Base de Calculo:</label>
-                                        <div class="col-sm-3 col-xs-3">
-                                           <input type="number"  ng-model="controlipi.valoresipiProprio.base" class="form-control" id="baseIpiProprio">         
+                                <form name="ipiProprioForm">
+                                    <div class="col-md-6 col-xs-12">
+                                        <div class="form-group" ng-class="{'has-error': !controlipi.valoresipiProprio.validacaoBase(), 'has-success': controlipi.valoresipiProprio.validacaoBase()}">
+                                            <label class="help-block" for="lbBaseIpiProprio">Base Calculo</label>
+                                            <input type="number" ng-model="controlipi.valoresipiProprio.base" class="form-control" required />         
+                                            <span class="help-block msg" ng-show="!controlipi.valoresipiProprio.validacaoBase()">Valor inválido!</span>
                                         </div>
                                     </div>
-                                    <div class="form-group">    
-                                        <label for="lbAliquotaIpiProprio">Alíquota IPI:</label>
-                                        <div class="col-sm-3 col-xs-3">
+                                    <div class="col-md-6 col-xs-12">
+                                        <div class="form-group" ng-class="{'has-error': !controlipi.valoresipiProprio.validacaoAliquotaNaoAceitaZero(), 'has-success': controlipi.valoresipiProprio.validacaoAliquotaNaoAceitaZero()}">    
+                                            <label class="help-block" for="lbAliquotaIpiProprio">Alíquota IPI</label>
                                             <div class="input-group">
-                                                <input type="number" ng-model="controlipi.valoresipiProprio.aliquota" class="form-control" id="aliquotaIpi">
+                                                <input type="number" ng-model="controlipi.valoresipiProprio.aliquota" class="form-control" id="aliquotaIpi" required />
                                                 <span class="input-group-addon" id="percent-addon">%</span>
                                             </div>
-                                        </div>
+                                            <span class="help-block msg" ng-show="!controlipi.valoresipiProprio.validacaoAliquotaNaoAceitaZero()">Valor inválido!</span>
+                                        </div>                    
                                     </div>
-                                    <div class="form-group">
-                                        <div class="col-xs-12">
-                                            <button type="button" class="btn btn-main btn-block" ng-click="controlipi.valoresipiProprio.calcular()">Calcular</button>
+                                    <div class="col-xs-12">
+                                        <div class="form-group">
+                                            <button type="button" class="btn btn-nmain btn-block" ng-click="controlipi.valoresipiProprio.calcular()" ng-disabled="!controlipi.valoresipiProprio.isValid()">Calcular</button>
                                         </div>
+                                        <a title="Discriminação" data-toggle="collapse" data-target="#discriminacaoIpiProprio" class="fa fa-question-circle-o pull-right help-discriminacao"></a>
+                                        <label class="help-block" for="lbValorIpiProprio">Valor IPI:</label>
+                                        <pre ng-bind="controlipi.valoresipiProprio.valor | currency"></pre>
                                     </div>
-                                    <div class="form-group">    
-                                        <label for="lbValorIpiProprio" class="col-sm-3 col-sm-offset-3 col-xs-3 col-xs-offset-3">Valor IPI:</label>
-                                        <div class="col-sm-3 col-xs-3">
-                                            <input type="text" ng-model="controlipi.valoresipiProprio.Valor" class="form-control"  id="valorIpiProprio" disabled>
-                                        </div>
-                                    </div>
-                                    <p></p>
-                                    <div class="panel panel-primary">
-                                        <div class="panel-heading">Discriminação Calculo:</div>
-                                            <div class="panel-body">
-                                                <center>
-                                                (Base de calculo) * (Alíquota de IPI)/100 = (Valor do IPI) 
-                                                <br></br>
-                                                {{controlipi.ipiProprio.base}} R$ * {{controlipi.ipiProprio.aliquota}}/100 = {{controlipi.ipiProprio.valorDiscriminacao}} R$
-                                                </center>
+                                    <div class="col-xs-12">
+                                        <div id="discriminacaoIpiProprio" class="collapse">
+                                            <div class="panel panel-primary">
+                                                <div class="panel-heading">Discriminação Calculo:
+                                                    <button type="button" class="close" data-toggle="collapse" data-target="#discriminacaoIpiProprio">&times;</button>
+                                                </div>
+                                                <div class="panel-body">
+                                                    <center>
+                                                    (Base de calculo) * (Alíquota de IPI)/100 = (Valor do IPI) 
+                                                    <br></br>
+                                                    {{controlipi.valoresipiProprio.base}} R$ * {{controlipi.valoresipiProprio.aliquota}}/100 = {{controlipi.valoresipiProprio.valorDiscriminacao}} R$
+                                                    </center>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-main-sub" ng-click="controlipi.limparIpiProprio()">Limpar</button>
-                                            <button type="button" class="btn btn-main-sub" data-dismiss="modal">Fechar</button>
                                         </div>
                                     </div>
                                 </form>
+                            </div>
+                            <div class="col-xs-12 col-xs-offset-0">
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-main-sub" ng-click="controlipi.limparIpiProprio()">Limpar</button>
+                                    <button type="button" class="btn btn-main-sub" data-dismiss="modal">Fechar</button>
+                                </div>
                             </div>
                         </div>
                     </div>
