--- a/app/views/stnormal_view.html
+++ b/app/views/stnormal_view.html
@@ -76,7 +76,7 @@
                                 <div class="col-xs-12">
                                     <div id="discriminacaoSt" class="collapse">
                                         <div class="panel panel-primary">
-                                            <div class="panel-heading">Discriminação Calculo:
+                                            <div class="panel-heading">Discriminação Calculo
                                                 <button type="button" class="close" data-toggle="collapse" data-target="#discriminacaoSt">&times;</button>
                                             </div>
                                             <div class="panel-body">
