--- a/app/views/calculoipi_view.html
+++ b/app/views/calculoipi_view.html
@@ -46,7 +46,7 @@
                                     <div class="col-xs-12">
                                         <div id="discriminacaoIpiProprio" class="collapse">
                                             <div class="panel panel-primary">
-                                                <div class="panel-heading">Discriminação Calculo:
+                                                <div class="panel-heading">Discriminação Calculo
                                                     <button type="button" class="close" data-toggle="collapse" data-target="#discriminacaoIpiProprio">&times;</button>
                                                 </div>
                                                 <div class="panel-body">
