--- a/app/views/stnormal_view.html
+++ b/app/views/stnormal_view.html
@@ -69,7 +69,7 @@
                                 <div class="col-xs-12">
                                     <div class="form-group">    
                                         <a title="Discriminação" data-toggle="collapse" data-target="#discriminacaoSt" class="fa fa-question-circle-o pull-right help-discriminacao"></a>
-                                        <label for="lbValorStProprio">Valor ST</label>
+                                        <label class="help-block" for="lbValorStProprio">Valor ST</label>
                                         <pre ng-bind="controlst.valoresStProprio.valorSt | currency"></pre>
                                     </div>
                                 </div>
