--- a/app/views/calculoipi_view.html
+++ b/app/views/calculoipi_view.html
@@ -1,7 +1,10 @@
 <body>
+    <div class="alt-titulo-view-container">
+        <p class="alt-titulo-view">IPI</p>
+    </div>
     <div class="container container-table col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
         <div class="row vertical-center-row">
-            <button type="button" class="btn btn-main btn-lg btn-block" data-toggle="modal" data-target="#ipiProprioModal">IPI Próprio</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#ipiProprioModal">IPI Próprio</button>
             <br>
             <button type="button" class="btn btn-main-sub btn-lg btn-block" ng-click="controlipi.voltar()">Voltar</button>
         </div>
