--- a/app/views/calculoicms_view.html
+++ b/app/views/calculoicms_view.html
@@ -1,9 +1,12 @@
 <body>
+    <div class="alt-titulo-view-container">
+        <p class="alt-titulo-view">ICMS</p>
+    </div>
     <div class="container container-table col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
         <div class="row vertical-center-row">
-            <button type="button" class="btn btn-main btn-lg btn-block" data-toggle="modal" data-target="#icmsProprioModal">ICMS Próprio</button>
-            <button type="button" class="btn btn-main btn-lg btn-block" data-toggle="modal" data-target="#icmsRedModal">Redução de Base</button>
-            <button type="button" class="btn btn-main btn-lg btn-block" data-toggle="modal" data-target="#icmsDifalModal">DIFAL</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#icmsProprioModal">ICMS Próprio</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#icmsRedModal">Redução de Base</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#icmsDifalModal">DIFAL</button>
             <br>
             <button type="button" class="btn btn-main-sub btn-lg btn-block" ng-click="controlicms.voltar()">Voltar</button>
         </div>
@@ -14,7 +17,7 @@
     <div id="icmsProprioModal" class="modal fade" role="dialog" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content col-sm-8 col-sm-offset-2 col-xs-12">
-                <div class="modal-header">
+                <div class="modal-header alt-cor-principal">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">ICMS Próprio</h4>
                 </div>
