--- a/app/views/home_view.html
+++ b/app/views/home_view.html
@@ -1,10 +1,13 @@
 <html>
 <body class="ng-scope">
-   <div class="container container-table col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
+    <div class="alt-titulo-view-container">
+        <p class="alt-titulo-view">Home</p>
+    </div>
+    <div class="container container-table col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
         <div class="row vertical-center-row">
-            <button type="button" class="btn btn-main btn-lg btn-block" type="button" ng-click="controladorhome.calculoICMS()">ICMS</button>
-            <button type="button" class="btn btn-main btn-lg btn-block" type="button" ng-click="controladorhome.calculoST()">ST</button>
-            <button type="button" class="btn btn-main btn-lg btn-block" type="button" ng-click="controladorhome.calculoIPI()">IPI</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block" type="button" ng-click="controladorhome.calculoICMS()">ICMS</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block" type="button" ng-click="controladorhome.calculoST()">ST</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block" type="button" ng-click="controladorhome.calculoIPI()">IPI</button>
         </div>
     </div>
 </body>
